advances-in-userpage

--- a/frontend/user.html
+++ b/frontend/user.html
@@ -32,23 +32,28 @@
     <nav class="page-header" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="#" >username<img src="images/Instagram.badge.png" alt="username" style="width:42px;height:42px;border:0">
-</a>
-                        <a href="#" >World stats<img src="images/1.png" alt="world-stats" style="width:42px;height:42px;border:0" align="right" >
-</a>
-                    </li>
+            <div class="row">
+  <div class="col-xs-6 col-md-3" align="center">
+    <a href="#" class="media">
+      <img src="images/Instagram.badge.png" alt="instagram-badge"><br>username
+    </a>
+  </div>
+  <div class="col-xs-6 col-md-3">
+      <a href="#" class="media">
+      <img src="" alt="">
+    </a>
+  </div>
+  <div class="col-xs-6 col-md-3">
+      <a href="#" class="media">
+      <img src="" alt="">
+    </a>
+  </div>
+  <div class="col-xs-6 col-md-3" align="center">
+      <a href="#" class="media">
+      <img src="images/1.png" alt="world-stats"><br>world stats
+    </a>
+  </div>
+                </li>
                     
                 </ul>
             </div>
@@ -60,20 +65,10 @@
     <!-- Page Content -->
     <div class="container">
 
-        <!-- Introduction Row -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">About Us
-                    <small>It's Nice to Meet You!</small>
-                </h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
-            </div>
-        </div>
-
         <!-- Team Members Row -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Our Team</h2>
+                <h2 class="page-header">Your Timeline Nation</h2>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
                 <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
