--- a/frontend/user.html
+++ b/frontend/user.html
@@ -33,22 +33,17 @@
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="row">
-  <div class="col-xs-6 col-md-3" align="center">
+  <div class="col-xs-6 col-md-4" align="center">
     <a href="#" class="media">
       <img src="images/Instagram.badge.png" alt="instagram-badge"><br>username
     </a>
   </div>
-  <div class="col-xs-6 col-md-3">
-      <a href="#" class="media">
-      <img src="" alt="">
+  <div class="col-xs-6 col-md-4">
+      <a href="#" class="thumbnail">
+      <img src="images/feedrepublic1.png" alt="">
     </a>
   </div>
-  <div class="col-xs-6 col-md-3">
-      <a href="#" class="media">
-      <img src="" alt="">
-    </a>
-  </div>
-  <div class="col-xs-6 col-md-3" align="center">
+  <div class="col-xs-6 col-md-4" align="center">
       <a href="#" class="media">
       <img src="images/1.png" alt="world-stats"><br>world stats
     </a>
@@ -68,35 +63,7 @@
         <!-- Team Members Row -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Your Timeline Nation</h2>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+                <h2 class="page-header">Your Feed Nation</h2>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
                 <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
@@ -118,12 +85,15 @@
 
         <!-- Footer -->
         <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
-                </div>
-                <!-- /.col-lg-12 -->
-            </div>
+            <div class="container">
+                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><div class="bullet"></div><a href="#">Home</a></li>
+        <li><div class="bullet"></div><a href="#">About Us</a></li>
+        <li><div class="bullet"></div><a href="#">World stats</a></li>
+        <li><div class="bullet"></div><a href="#">Contact</a><div class="bullet"></div></li>
+      </ul>
+                 </div>
             <!-- /.row -->
         </footer>
 
