Secondary_index_fixes on site _details

--- a/frontend/user.html
+++ b/frontend/user.html
@@ -39,7 +39,7 @@
     </a>
   </div>
   <div class="col-xs-6 col-md-4">
-      <a href="#" class="thumbnail">
+      <a href="#" class="media">
       <img src="images/feedrepublic1.png" alt="">
     </a>
   </div>
@@ -79,26 +79,31 @@
                 </h3>
                 <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
             </div>
+            <div class="col-lg-4 col-sm-6 text-center">
+                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+                <h3>John Smith
+                    <small>Job Title</small>
+                </h3>
+                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+            </div>
         </div>
 
         <hr>
-
-        <!-- Footer -->
+    </div>
+    <!-- /.container -->
+<!-- Footer -->
         <footer>
             <div class="container">
                  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><div class="bullet"></div><a href="#">Home</a></li>
-        <li><div class="bullet"></div><a href="#">About Us</a></li>
-        <li><div class="bullet"></div><a href="#">World stats</a></li>
-        <li><div class="bullet"></div><a href="#">Contact</a><div class="bullet"></div></li>
+        <li class="active"><div class="bullet"></div><a href="index.html">Home</a></li>
+        <li><div class="bullet"></div><a href="About%20us.html">About Us</a></li>
+        <li><div class="bullet"></div><a href="world.html">World stats</a></li>
+        <li><div class="bullet"></div><a href="Contacts.html">Contact</a><div class="bullet"></div></li>
       </ul>
                  </div>
             <!-- /.row -->
         </footer>
-
-    </div>
-    <!-- /.container -->
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
