--- a/frontend/conctacs_1.html
+++ b/frontend/conctacs_1.html
@@ -57,7 +57,7 @@
       <br>
       
            <div class="Mac">
-           <p>We are a group of passionate data analysists/ programmers who have had a very limited experience with Insta, and trying to make a difference by providing insights and engaging people with data. </p>
+           <p>Dalia Alfarghal Email:hamoda.dalia@gmail.com</p>
 
            
             </div>
