--- a/frontend/index_1.html
+++ b/frontend/index_1.html
@@ -30,8 +30,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream:frontend/index_1.html
+
       
     <!-- GOOGLE CHART 1 -->
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
@@ -85,12 +84,7 @@
       }
     </script>  
  <!-- GOOGLE CHART 1 -->    
-=======
 
->>>>>>> Stashed changes:frontend/Latest/index_1.html
-=======
-   
->>>>>>> Stashed changes
   </head>
   <body>        
       <!-- Navigation -->
@@ -108,7 +102,7 @@
       <img  src="images/feedrepublic1.png" alt="">
     </a>
   </div>
-  <style>body html {max-width:100% !important;overflow: hidden !important;}</style>
+  <style>html {max-width:100% !important;overflow-x: hidden !important;}</style>
 
   <div class="col-xs-6 col-md-4" align="center">
                 </li>
