--- a/frontend/index_1.html
+++ b/frontend/index_1.html
@@ -35,10 +35,10 @@
   <body>        
       <!-- Navigation -->
     <nav class="page-header" role="navigation">
-        <div class="container">
+        <div class="container fawzy">
 
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="row">
+            <div class="row"> 
   <div class="col-xs-6 col-md-4" align="center">
     </a>
 
@@ -89,7 +89,7 @@
             <p class="lead">This is where you can make the most out of your instagram, and where you can see the best to do to make your instagram go <strong>BEAUTIFUL!!</strong></p>
             <p class="lead">
               <a href="#"><img src="images/Instagram_normal.png"></a>
-            </p>
+            </p></div>
               <!-- Chart -->
         <div class="container">
         <div class="row">
