--- a/frontend/About_us_1.html
+++ b/frontend/About_us_1.html
@@ -40,7 +40,7 @@
 
      <!-- Navigation -->
     <nav class="page-header" role="navigation">
-        <div class="container">
+        <div class="container fawzy">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="row">
   <div class="col-xs-6 col-md-4" align="center">
