--- a/frontend/Contacts_1.html
+++ b/frontend/Contacts_1.html
@@ -34,15 +34,15 @@
 
      <!-- Navigation -->
     <nav class="page-header" role="navigation">
-        <div class="container">
+        <div class="container fawzy">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="row">
   <div class="col-xs-6 col-md-4" align="center">
     </a>
   </div>
-  <div id="logo-color" class="col-xs-6 col-md-4">
+  <div class="col-xs-6 col-md-4">
       <a href="#" class="media">
-      <img  src="images/feedrepublic1.png" alt="">
+      <img src="images/feedrepublic1.png" alt="">
     </a>
   </div>
   
