World file changes

--- a/frontend/world.html
+++ b/frontend/world.html
@@ -189,7 +189,7 @@ function drawBasic() {
 
     <!-- Navigation -->
     <nav class="page-header" role="navigation">
-        <div class="container">
+        <div class="container fawzy">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="row">
   <div class="col-xs-6 col-md-4" align="center">
@@ -267,7 +267,7 @@ function drawBasic() {
         <li class="active"><div class="bullet"></div><a href="index_1.html">Home</a></li>
         <li><div class="bullet"></div><a href="About_us_1.html">About Us</a></li>
         <li><div class="bullet"></div><a href="world.html">World stats</a></li>
-        <li><div class="bullet"></div><a href="conctacs_1.html">Contact</a><div class="bullet"></div></li>
+        <li><div class="bullet"></div><a href="contacts_1.html">Contact</a><div class="bullet"></div></li>
       </ul>
                  </div>
             <!-- /.row -->
