--- a/frontend/world.html
+++ b/frontend/world.html
@@ -198,7 +198,7 @@ function drawBasic() {
     </a>
   </div>
   <div class="col-xs-6 col-md-4">
-      <a href="#" class="thumbnail">
+      <a href="#" class="media">
       <img src="images/feedrepublic1.png" alt="">
     </a>
   </div>
@@ -266,7 +266,7 @@ function drawBasic() {
       <ul class="nav navbar-nav">
         <li class="active"><div class="bullet"></div><a href="index_1.html">Home</a></li>
         <li><div class="bullet"></div><a href="About_us_1.html">About Us</a></li>
-        <li><div class="bullet"></div><a href="world.html">World stats</a></li>
+    
         <li><div class="bullet"></div><a href="contacts_1.html">Contact</a><div class="bullet"></div></li>
       </ul>
                  </div>
