Header name changed

--- a/frontend/About_us_1.html
+++ b/frontend/About_us_1.html
@@ -39,7 +39,7 @@
 
 
      <!-- Navigation -->
-    <nav class="page-header" role="navigation">
+    <nav class="page-header fawzy" role="navigation">
         <div class="container fawzy">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="row">
