--- a/frontend/Contacts_1.html
+++ b/frontend/Contacts_1.html
@@ -33,7 +33,7 @@
 
 
      <!-- Navigation -->
-    <nav class="page-header" role="navigation">
+    <nav class="page-header fawzy" role="navigation">
         <div class="container fawzy">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="row">
@@ -52,6 +52,8 @@
               <div class="container">
                  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
+      <li><div class="bullet"></div><a href="About_us_1.html"><strong>
+        Home</strong></a></li>
       
         <li><div class="bullet"></div><a href="About_us_1.html"><strong>
         About us</strong></a></li>
