--- a/frontend/user.html
+++ b/frontend/user.html
@@ -162,7 +162,7 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="page-header" role="navigation">
+    <nav class="page-header fawzy" role="navigation">
         <div class="container fawzy">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="row">
