--- a/frontend/index_1.html
+++ b/frontend/index_1.html
@@ -34,7 +34,7 @@
   </head>
   <body>        
       <!-- Navigation -->
-    <nav class="page-header" role="navigation">
+    <nav class="page-header fawzy" role="navigation">
         <div class="container fawzy">
 
             <!-- Brand and toggle get grouped for better mobile display -->
