--- a/frontend/world.html
+++ b/frontend/world.html
@@ -188,7 +188,7 @@ function drawBasic() {
 <body>
 
     <!-- Navigation -->
-    <nav class="page-header" role="navigation">
+    <nav class="page-header fawzy" role="navigation">
         <div class="container fawzy">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="row">
