--- a/frontend/Contacts_1.html
+++ b/frontend/Contacts_1.html
@@ -205,7 +205,7 @@
       </a>
     </li>
     <li>
-      <a href="" title="Anders">
+      <a href="https://se.linkedin.com/in/abergs" title="Anders">
         <img src="images/image-02.jpg" alt="Anders">
       </a>
     </li>
