fixed title and connect to instagram

--- a/frontend/index_1.html
+++ b/frontend/index_1.html
@@ -83,10 +83,10 @@
     width: 100%;
     text-align: center;
 "> 
-            <h1 class="cover-heading">Hello.</h1>
-            <p class="lead">This is where you can make the most out of your instagram, and where you can see the best to do to make your instagram go <strong>BEAUTIFUL!!</strong></p>
+            <h1 class="cover-heading">Mostly food or #selfies?</h1>
+            <p class="lead">Login to get to know your instagram feed - by using our advanced automated image analysis</p>
             <p class="lead">
-              <a href="#"><img src="images/Instagram_normal.png"></a>
+              <a href="http://feedrepublic.azurewebsites.net/connect-to-instagram"><img src="images/Instagram_normal.png"></a>
             </p></div>
               <!-- Chart -->
         <div class="container">
