--- a/frontend/Contacts_1.html
+++ b/frontend/Contacts_1.html
@@ -149,7 +149,7 @@
               <div class="container">
                  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-      <li><div class="bullet"></div><a href="About_us_1.html"><strong>
+      <li><div class="bullet"></div><a href="index_1.html"><strong>
         Home</strong></a></li>
       
         <li><div class="bullet"></div><a href="About_us_1.html"><strong>
