--- a/frontend/user.html
+++ b/frontend/user.html
@@ -155,7 +155,7 @@
     </a>
   </div>
   <div class="col-xs-6 col-md-4" align="center">
-      <a href="#" class="media">
+      <a href="world.html" class="media">
       <img src="images/1.png" alt="world-stats"><br>world stats
     </a>
   </div>
