--- a/frontend/world.html
+++ b/frontend/world.html
@@ -147,7 +147,7 @@
     </a>
   </div>
   <div class="col-xs-6 col-md-4" align="center">
-      <a href="#" class="media">
+      <a href="user.html" class="media">
       <img src="images/2.png" alt="user stats"><br>user stats
     </a>
   </div>
