--- a/frontend/user.html
+++ b/frontend/user.html
@@ -144,7 +144,7 @@
 
     <!-- Navigation -->
     <nav class="page-header fawzy" role="navigation">
-        <div class="container fawzy">
+        <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="row">
   <div class="col-xs-6 col-md-4" align="center">
