--- a/frontend/About_us_1.html
+++ b/frontend/About_us_1.html
@@ -51,6 +51,7 @@
       <img  src="images/feedrepublic1.png" alt="">
     </a>
   </div>
+  <style>html {max-width:100% !important;overflow-x: hidden !important;}</style>
    <div class="col-xs-6 col-md-4" align="center">
                 </li>
                 
