Changed file names
Please don’t change the files names again.
The index is index.html, about is about.html, contacts is
contacts.html, and all the file names were changed at “user.html” and
“world.html”

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -58,10 +58,9 @@
               <div class="container">
                  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><div class="bullet"></div><a href="index_1.html"><strong>Home</strong></a></li>
-        <li><div class="bullet"></div><a href="About_us_1.html"><strong>
-        About us</strong></a></li>
-        <li><div class="bullet"></div><a href="contacts_1.html"><strong>Contact us</strong></a><div class="bullet"></div></li>
+        <li class="active"><div class="bullet"></div><a href="index.html"><strong>Home</strong></a></li>
+      
+        <li><div class="bullet"></div><a href="contacts.html"><strong>Contact us</strong></a><div class="bullet"></div></li>
       </ul>
                  </div>
       </nav>
