--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,9 +53,9 @@
                  <div class="collapse navbar-collapse one" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         
-        <li><div class="bullet-one"></div><a href="About_us_1.html"><strong>
+        <li><div class="bullet-one"></div><a href="about.html"><strong>
         About us</strong></a></li>
-        <li><div class="bullet-two"></div><a href="contacts_1.html"><strong>Contact us</strong></a><div class="bullet"></div></li>
+        <li><div class="bullet-two"></div><a href="contacts.html"><strong>Contact us</strong></a><div class="bullet"></div></li>
       </ul>
                  </div>
                     
