--- a/frontend/world.html
+++ b/frontend/world.html
@@ -208,10 +208,10 @@
             <div class="container">
                  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><div class="bullet"></div><a href="index_1.html">Home</a></li>
-        <li><div class="bullet"></div><a href="About_us_1.html">About Us</a></li>
+        <li class="active"><div class="bullet"></div><a href="index.html">Home</a></li>
+        <li><div class="bullet"></div><a href="about.html">About Us</a></li>
     
-        <li><div class="bullet"></div><a href="contacts_1.html">Contact</a><div class="bullet"></div></li>
+        <li><div class="bullet"></div><a href="contacts.html">Contact</a><div class="bullet"></div></li>
       </ul>
                  </div>
             <!-- /.row -->
